# minco

./: .gitignore  README.md  build  pyproject.toml
minco/: __init__.py
minco.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
