[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minco"
version = "1.1"
description = "minco"
readme = "README.md"
requires-python = ">=3.0"
license = {text = "MIT"}
authors = [
  {name = "Kanowara Sinoka"}
]

[project.urls]
Homepage = "https://github.com/sinokadev/minco"